--- a/roles/nagiosxi-monitoring/defaults/main.yml
+++ b/roles/nagiosxi-monitoring/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
+## To define custome variables which is used in our templet files templets/<templet>.j2
 fqdn: "{{ fqdn }}"
 fqdn_address: "{{ fqdn_address }}"
-nfs_janum: "{{ nfs_janum }}"
